Fixed the round() mixin to use 50%.

--- a/libs/mixins/btn-icon.less
+++ b/libs/mixins/btn-icon.less
@@ -18,7 +18,7 @@
         height: 2em;
         text-align: center;
         border: 2px solid @color;
-        border-radius: 50%;
+        .round;
         .vertical-align(absolute);
         & when (@border = no-border) {
             border: none;
