--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -63,11 +63,11 @@
 }
 .round() {
     /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-    -webkit-border-radius: 20px; 
+    -webkit-border-radius: 50%; 
     /* Firefox 1-3.6 */
-    -moz-border-radius: 20px;   
+    -moz-border-radius: 50%;   
     /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
-    border-radius: 20px; 
+    border-radius: 50%; 
     border: 2px solid @white;
 }
 // Directions
