--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3682,7 +3682,13 @@ input[type="file"]::before {
   height: 2em;
   text-align: center;
   border: 2px solid #000;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4693,8 +4699,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4715,8 +4726,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4737,8 +4753,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4759,8 +4780,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4781,8 +4807,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4803,8 +4834,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4825,8 +4861,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4847,8 +4888,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4869,8 +4915,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4891,8 +4942,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4913,8 +4969,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4935,8 +4996,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4957,8 +5023,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -4979,8 +5050,13 @@ input.custom-dropdown__button {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -11816,8 +11892,13 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
   width: 2em;
   height: 2em;
   text-align: center;
-  border: 2px solid #FFF;
+  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+  -webkit-border-radius: 50%;
+  /* Firefox 1-3.6 */
+  -moz-border-radius: 50%;
+  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
   border-radius: 50%;
+  border: 2px solid #FFF;
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
