Update index page
- boxes
- kit

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -311,6 +311,7 @@ input[type="file"]::before {
     border: 1px solid @gray-6;
     .btn-icon("\F0D7",@color:@black,@border:no-border);
     padding-right: 0;
+    background-color: @white;
     &:after {
         pointer-events:none;
     }
