Various updates around content index pages

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -76,7 +76,8 @@ input[type=button] {
     color: @white;
     background-color: @green;
     &:hover, &:active, &:focus  {
-        background-color: @green-dark;             
+        background-color: @green-dark;  
+        color: @white;           
     }
 }    
 
@@ -109,7 +110,7 @@ input[type=button] {
 }
 .button--purple.button--purple {
     background-color: @purple-dark;
-
+    color: @white;
     &:hover, &:focus, &:active {
         background: darken(@purple-dark,10%);
     }
