--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -89,6 +89,9 @@
 .exclamation-button-icon {
     .btn-icon("\0021");
 }
+.search-button-icon {
+    .btn-icon("\f002");
+}
 // Actions
 .email-button-icon {
     .btn-icon("\f003");
