--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -5,12 +5,18 @@
  *
  */
 
-.index-page__box {
-    margin: @box-spacing*.5;
-    padding: @box-spacing;
-    background-color: @heritage-blue-lightest;
-    border-top-width: 4px;
+// Move to mixins 
 
+.index-box ( 
+        @index-box-background: @heritage-blue-lightest,
+        @index-box-text: @text-color, 
+    ){
+    padding: @box-spacing;
+    margin: @box-spacing*.5;
+    background-color: @index-box-background;
+    color: @index-box-text;
+    border-top-width: 4px;
+    display: block;
     & > h2 {
         margin: 0 0 @box-spacing*.7;
         font-size: @font-size-medium;
@@ -20,13 +26,37 @@
             color: @heritage-blue;
         }
     }
-
     & > h3 {
         margin: 0 0 @box-spacing*.7;
         font-size: @font-size-base;
         color: @text-color;
     }
 }
+
+.index-page__box,
+.index-box {
+    .index-box( 
+        @heritage-blue-lightest, 
+        @heritage-blue 
+    ); 
+}
+.index-page__box--green,
+.index-box__green {
+    .index-box( 
+        @green-lighter, 
+        @text-color 
+    ); 
+}
+
+.index-page__box--purple,
+.index-box__purple {
+    .index-box( 
+        @generous-mauve, 
+        @text-color 
+    ); 
+}
+
+
 
 
  .beta-box() {
