Add homepage kit

--- a/libs/base/framework.less
+++ b/libs/base/framework.less
@@ -10,7 +10,7 @@
     max-width: @full-page-width;
     margin: auto;
     clear: both;
-    padding: calc(@box-spacing-vertical * 2) 0;
+    padding: calc(@box-spacing-vertical * .7) 0 (@box-spacing-vertical * .7)  (@box-spacing-vertical * 1);
 }
 // Keeping columns flexible, to combine together where needed
 // Base layout
