--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -11,6 +11,10 @@
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
     color: @gray-2;
+        a {
+        border-bottom: none;
+    }
+
     
     .btn {
         padding: .3em .5em;
