--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -27,6 +27,9 @@
     padding-right: 0.25em;
     color: @link-color;
     font-size: 75%;
+    a {
+        border-bottom: none;
+    }
 }
 .a-external-link:after {
     content: "\f08e";
