Mostly button fixes

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -11,19 +11,19 @@
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
     color: @gray-2;
-        a {
-        border-bottom: none;
-    }
+ }
 
-    
-    .btn {
-        padding: .3em .5em;
-        margin-left: .25rem;
-        border-radius: @form-border-radius;
-        font-weight: @font-weight-bolder;
-        font-size: @font-size-small;
-        cursor: pointer;
-        color: @heritage-blue;
+ .title__subheading--footer {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    padding: .35rem 0;
+    padding: 1rem 0 1rem 0;
+    border-top: @gray-7 1px solid;
+    border-bottom: @gray-7 1px solid;
+    font-size: @font-size-small;
+    color: @gray-2;
+    a {
+        border-bottom: transparent;
     }
  }
 
