--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -19,7 +19,13 @@ input[type=button] {
     &:hover,
     &:focus,
     &:active {
-        background-color: darken(@aqua, 5%)
+        background-color: darken(@aqua, 5%);
+        outline: 0;
+    }
+    &:focus {
+        -webkit-box-shadow: 0px 0px 0px 2px @heritage-yellow;
+        -moz-box-shadow: 0px 0px 0px 2px @heritage-yellow;
+        box-shadow: 0px 0px 0px 2px @heritage-yellow;
     }
 }
 
@@ -81,14 +87,6 @@ input[type=button] {
     }
 }    
 
-.btn-primary-outline {
-    background-color: @white;
-    border: 1px solid @heritage-blue-light;
-    color: @heritage-blue;
-    &:hover, &:active, &:focus  {
-        background-color: @heritage-blue-lighter;
-    }
-}
 
 // Old button styles
 // Do we need orange, pink and purple?
@@ -142,4 +140,55 @@ button:disabled {
     top: 0; bottom: 0; right: 0; left: 0;
     background: #ddd url("/static/images/ajax-loader.gif") no-repeat center center;
     background-color: rgba( 255,255,255,.7);
+}
+
+// Small Button styles
+
+.btn-small,
+.btn-primary-outline {
+    .btn-small( 
+        @heritage-blue,
+        @heritage-blue-light,
+        @white,
+        @blue-lighter 
+    ); 
+}
+
+.btn-small--green {
+    .btn-small( 
+        @gray-2, 
+        @aqua,
+        @white,
+        @aqua-light 
+    ); 
+}
+
+.btn-small--red {
+    .btn-small( 
+        @text-color, 
+        @red,
+        @white,
+        @red-lighter 
+    ); 
+}
+
+// Multiple buttons in a set 
+
+.btn-group {
+    display: inline-block;
+    white-space: nowrap;
+    margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
+    .btn {
+        border-radius: 0;
+        margin: 0;
+        margin-right: 1px;
+        display: inline-block;
+    }
+    & >:first-child {
+        border-radius: 2px 0 0 2px;
+    }
+    & >:last-child {
+        border-radius: 0 2px 2px 0;
+        margin: 0;
+    }
 }
